--- a/app/src/main/res/layout/fragment_settings_tab_game.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_game.xml
@@ -6,14 +6,44 @@
     android:layout_height="match_parent"
     android:padding="20dp">
 
-
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/txtLanguages"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Game"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:text="Language"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/spnCountry"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:entries="@array/languages"
+        app:layout_constraintBottom_toBottomOf="@+id/txtLanguages"
+        app:layout_constraintStart_toEndOf="@+id/txtLanguages"
+        app:layout_constraintTop_toTopOf="@+id/txtLanguages" />
+
+    <TextView
+        android:id="@+id/txtCardStyle"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Card Style"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
+
+    <Spinner
+        android:id="@+id/spnCardStyle"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:entries="@array/cardStyle"
+        app:layout_constraintBottom_toBottomOf="@+id/txtCardStyle"
+        app:layout_constraintStart_toEndOf="@+id/txtCardStyle"
+        app:layout_constraintTop_toTopOf="@+id/txtCardStyle" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
