--- a/app/src/main/res/layout/fragment_settings_tab_game.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_game.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/txtLanguages"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Language"
@@ -19,7 +19,7 @@
         android:id="@+id/spnCountry"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:entries="@array/languages"
         app:layout_constraintBottom_toBottomOf="@+id/txtLanguages"
         app:layout_constraintStart_toEndOf="@+id/txtLanguages"
@@ -27,23 +27,41 @@
 
     <TextView
         android:id="@+id/txtCardStyle"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Card Style"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
+        app:layout_constraintTop_toBottomOf="@+id/txtAnimationSpeed" />
 
     <Spinner
         android:id="@+id/spnCardStyle"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:entries="@array/cardStyle"
         app:layout_constraintBottom_toBottomOf="@+id/txtCardStyle"
         app:layout_constraintStart_toEndOf="@+id/txtCardStyle"
         app:layout_constraintTop_toTopOf="@+id/txtCardStyle" />
 
+    <TextView
+        android:id="@+id/txtAnimationSpeed"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Animation Speed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLanguages" />
+
+    <Spinner
+        android:id="@+id/spnAnimationSpeed"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:entries="@array/animationSpeed"
+        app:layout_constraintBottom_toBottomOf="@+id/txtAnimationSpeed"
+        app:layout_constraintStart_toEndOf="@+id/txtAnimationSpeed"
+        app:layout_constraintTop_toTopOf="@+id/txtAnimationSpeed" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
