--- a/app/src/main/res/layout/fragment_settings_tab_sound.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_sound.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Music"
+        android:text="Songs Playlist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swchMusic" />
@@ -64,5 +64,23 @@
         android:text="Music"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/swchEffects" />
+
+    <CheckBox
+        android:id="@+id/chkBoxSong1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="insert song name here"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtMusic" />
+
+    <CheckBox
+        android:id="@+id/chkBoxSong2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="insert song name here"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chkBoxSong1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
