--- a/app/src/main/res/layout/fragment_settings_tab_sound.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_sound.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,37 +15,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Volume"
+            android:text="@string/Sound"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <SeekBar
-            android:id="@+id/seekBarEffects"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/swchEffects"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/swchEffects"
-            app:layout_constraintTop_toTopOf="@+id/swchEffects" />
-
-        <SeekBar
-            android:id="@+id/seekBarMusic"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/swchMusic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/swchMusic"
-            app:layout_constraintTop_toTopOf="@+id/swchMusic" />
 
         <TextView
             android:id="@+id/txtMusic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Songs Playlist"
+            android:text="@string/SongsPlaylist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/swchMusic" />
@@ -54,7 +35,7 @@
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_marginTop="16dp"
-            android:text="Effects"
+            android:text="@string/Effects"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtVolume" />
 
@@ -62,10 +43,11 @@
             android:id="@+id/swchMusic"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:text="Music"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/swchEffects" />
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/Music"
+            app:layout_constraintStart_toEndOf="@+id/swchEffects"
+            app:layout_constraintTop_toBottomOf="@+id/txtVolume" />
 
         <CheckBox
             android:id="@+id/chkBoxSong1"
