--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/btnSettingsApply"
-        android:text="Apply"
+        android:text="@string/Apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -43,12 +43,12 @@
 
     <Button
         android:id="@+id/btnSettingsToMenu"
-        android:text="Main Menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="12dp"/>
+        android:layout_marginBottom="12dp"
+        android:text="@string/MainMenu" />
 
 </RelativeLayout>
