--- a/app/src/main/res/layout/activity_random_game.xml
+++ b/app/src/main/res/layout/activity_random_game.xml
@@ -25,6 +25,7 @@
             android:id="@+id/imgView11"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +34,7 @@
             android:id="@+id/imgView12"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr15"
             app:layout_constraintStart_toEndOf="@+id/imgView11"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +43,7 @@
             android:id="@+id/imgView13"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr8"
             app:layout_constraintStart_toEndOf="@+id/imgView12"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,7 @@
             android:id="@+id/imgView14"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr4"
             app:layout_constraintStart_toEndOf="@+id/imgView13"
             app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +61,7 @@
             android:id="@+id/imgView21"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr11"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgView11" />
@@ -69,8 +70,7 @@
             android:id="@+id/imgView22"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr6"
             app:layout_constraintStart_toEndOf="@+id/imgView21"
             app:layout_constraintTop_toBottomOf="@+id/imgView12" />
@@ -79,8 +79,7 @@
             android:id="@+id/imgView23"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr7"
             app:layout_constraintStart_toEndOf="@+id/imgView22"
             app:layout_constraintTop_toBottomOf="@+id/imgView13" />
@@ -89,8 +88,7 @@
             android:id="@+id/imgView24"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr3"
             app:layout_constraintStart_toEndOf="@+id/imgView23"
             app:layout_constraintTop_toBottomOf="@+id/imgView14" />
@@ -99,7 +97,7 @@
             android:id="@+id/imgView31"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgView21" />
@@ -108,8 +106,7 @@
             android:id="@+id/imgView32"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr10"
             app:layout_constraintStart_toEndOf="@+id/imgView31"
             app:layout_constraintTop_toBottomOf="@+id/imgView22" />
@@ -118,8 +115,7 @@
             android:id="@+id/imgView33"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr5"
             app:layout_constraintStart_toEndOf="@+id/imgView32"
             app:layout_constraintTop_toBottomOf="@+id/imgView23" />
@@ -128,8 +124,7 @@
             android:id="@+id/imgView34"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr12"
             app:layout_constraintStart_toEndOf="@+id/imgView33"
             app:layout_constraintTop_toBottomOf="@+id/imgView24" />
@@ -138,7 +133,7 @@
             android:id="@+id/imgView41"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr13"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgView31" />
@@ -147,8 +142,7 @@
             android:id="@+id/imgView42"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr14"
             app:layout_constraintStart_toEndOf="@+id/imgView41"
             app:layout_constraintTop_toBottomOf="@+id/imgView32" />
@@ -157,8 +151,7 @@
             android:id="@+id/imgView43"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/nr2"
             app:layout_constraintStart_toEndOf="@+id/imgView42"
             app:layout_constraintTop_toBottomOf="@+id/imgView33" />
@@ -167,8 +160,7 @@
             android:id="@+id/imgView44"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:background="@drawable/card_background_white"
             android:src="@drawable/empty"
             app:layout_constraintStart_toEndOf="@+id/imgView43"
             app:layout_constraintTop_toBottomOf="@+id/imgView34" />
@@ -225,10 +217,9 @@
         android:layout_marginTop="24dp"
         android:text="Smth adsfasdf \n asdf ads\n"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameTilesHolder"
         android:visibility="gone"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameTilesHolder" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
